--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -12,7 +12,7 @@
 
     width: 100%;
     height: 110px;
-background: url("/images/teaser-home.svg");
+background: url("../images/teaser-home.svg");
 
 background-size: cover;
 display: flex;
@@ -179,7 +179,7 @@ text-decoration:underline;
     width: 100%;
     height: 300px;
    
-    background-image: url("/images/home_bg-sm.gif");
+    background-image: url("../images/home_bg-sm.gif");
     background-size: cover;
     background-position: center;
 
